force-app/unpackaged/default/objects/FieloPLT__Member__c/fields/F_LevelOverri_deEndDt__c.field-meta.xml
<CustomField>
    <fullName>F_LevelOverri_deEndDt__c</fullName>
    <label>Level Override End Dt</label>
    <type>Date</type>
</CustomField>