force-app/unpackaged/default/objects/FieloPLT__Member__c/fields/F_OptOut__c.field-meta.xml
<CustomField>
    <fullName>F_OptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt-out</label>
    <type>Checkbox</type>
</CustomField>